--- a/docker/nightly/Dockerfile
+++ b/docker/nightly/Dockerfile
@@ -1,6 +1,5 @@
 FROM alpine:3.9
 ENV BOOST_ROOT=/tmp/boost_install
-ENV NETWORK=live
 ENV REPO=https://github.com/BananoCoin/banano.git
 ENV BOOST_BASENAME=boost_1_69_0
 ENV BOOST_ARCHIVE=boost_1_69_0.tar.bz2
@@ -9,7 +8,7 @@ ENV BOOST_ARCHIVE_SHA256=8f32d4617390d1c2d16f26a27ab60d97807b35440d45891fa340fc2
 COPY ./banano /tmp/src
 RUN apk update && \
 	apk upgrade && \
-	apk --update add --no-cache --virtual .source-tools git cmake ninja alpine-sdk linux-headers binutils bash apache2 apache2-ssl alpine-sdk openssl openssl-dev boost-dev curl-dev
+	apk --update add --no-cache --virtual .source-tools git cmake ninja alpine-sdk linux-headers binutils openssl openssl-dev boost-dev curl-dev
 RUN wget --quiet -O "${BOOST_ARCHIVE}.new" "${BOOST_URL}" && \
 	echo "${BOOST_ARCHIVE_SHA256}  ${BOOST_ARCHIVE}.new" | sha256sum -c && \
 	mv "${BOOST_ARCHIVE}.new" "${BOOST_ARCHIVE}" && \
@@ -23,14 +22,11 @@ RUN wget --quiet -O "${BOOST_ARCHIVE}.new" "${BOOST_URL}" && \
 RUN  && \
 	mkdir -p /tmp/build && \
 	cd /tmp/build && \
-	cmake /tmp/src -DBOOST_ROOT=/tmp/boost_install -DBOOST_LIBRARYDIR=undefined -DACTIVE_NETWORK=nano_live_network && \
+	cmake /tmp/src -DBOOST_ROOT=/tmp/boost_install -DBOOST_LIBRARYDIR=undefined -DACTIVE_NETWORK=nano_undefined_network && \
 	echo "cmake DONE" && \
 	make bananode && \
-	cd .. && \
-	echo ${NETWORK} > /etc/nano-network && \
 	strip /tmp/build/bananode
 
 FROM alpine:3.9
 COPY --from=0 /tmp/build/bananode /usr/bin
-COPY --from=0 /etc/nano-network /etc
 ENTRYPOINT ["bananode"]
