--- a/docker/22/Dockerfile
+++ b/docker/22/Dockerfile
@@ -2,11 +2,11 @@ FROM alpine:3.11.6
 ENV BOOST_ROOT=/tmp/boost_install
 ENV REPO=https://github.com/BananoCoin/banano.git
 ENV NETWORK=live
-ENV BOOST_BASENAME=boost_1_69_0
-ENV BOOST_ARCHIVE=boost_1_69_0.tar.bz2
-ENV BOOST_URL=https://github.com/anzerr/boost.libary/blob/master/boost_1_69_0.tar.bz2?raw=true
-ENV BOOST_ARCHIVE_SHA256=8f32d4617390d1c2d16f26a27ab60d97807b35440d45891fa340fc2648b04406
-ENV BOOST_LIB=thread,log,filesystem,program_options
+ENV BOOST_BASENAME=boost_1_70_0
+ENV BOOST_ARCHIVE=boost_1_70_0.tar.bz2
+ENV BOOST_URL=https://github.com/anzerr/boost.libary/blob/master/boost_1_70_0.tar.bz2?raw=true
+ENV BOOST_ARCHIVE_SHA256=430ae8354789de4fd19ee52f3b1f739e1fba576f0aded0897c3c2bc00fb38778
+ENV BOOST_LIB=filesystem,log,program_options,system,thread
 RUN apk update && \
 	apk upgrade && \
 	apk --update add --no-cache --virtual .source-tools git cmake ninja alpine-sdk linux-headers binutils openssl openssl-dev boost-dev curl-dev
@@ -17,10 +17,10 @@ RUN wget --quiet -O "${BOOST_ARCHIVE}.new" "${BOOST_URL}" && \
 	tar xf "${BOOST_ARCHIVE}" && \
 	cd "${BOOST_BASENAME}" && \
 	./bootstrap.sh --show-libraries && \
-	./bootstrap.sh --with-libraries=thread,log,filesystem,program_options && \
+	./bootstrap.sh --with-libraries=filesystem,log,program_options,system,thread && \
 	./b2 -d1 --prefix="${BOOST_ROOT}" link=static install && \
 	echo "boost build done"
-RUN git clone --recurse-submodules -j8 https://github.com/BananoCoin/banano.git /tmp/src && cd /tmp/src && git reset --hard 4c370527441282bb5945fb3c83ca19a660b9f209 && \
+RUN git clone --recurse-submodules -j8 https://github.com/BananoCoin/banano.git /tmp/src && cd /tmp/src && git reset --hard ad1f47eba648cef463210aaed9f762b763ba7795 && \
 	mkdir -p /tmp/build && \
 	cd /tmp/build && \
 	cmake /tmp/src -DBOOST_ROOT=/tmp/boost_install -DBOOST_LIBRARYDIR=undefined -DACTIVE_NETWORK=nano_live_network && \
